# sweetsweep

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  example_with_csv.py  mainwindow.ui  pyproject.toml  setup.cfg  setup.py  sweep.py  viewer.py
examples/: example.py  example_only_exp_id.py  example_specific_dict.py  example_with_csv-arrayjob.py  example_with_csv.py
integration/: Sweet Sweep
sweetsweep/: __init__.py  __main__.py  common.py  mainwindow.ui  sweep.py  viewer.py
tests/: test_sweep_specific_dict.py
