# Follow PEP 621: https://peps.python.org/pep-0621/
# setuptools specifics: https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "sweetsweep"
authors = [{name = "Matthieu Heitz", email = "heitz.matthieu@gmail.com"}]
description = "SweetSweep: Run parameter sweeps and visualize results effortlessly"
urls = {"Source code" = "https://github.com/matthieuheitz/sweet-sweep"}
readme = "README.md"
dynamic = ["version"]
#dynamic = ["version", "readme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dependencies = [
    'PyQt5',
    'numpy'
]

[project.optional-dependencies]
parallel_sweep = [
    'pathos',
]
examples = [
    'matplotlib',
]


# setuptools
[tool.setuptools]
packages = ["sweetsweep"]



[tool.setuptools.dynamic]
version = {attr = "sweetsweep.__version__"}
#readme = {file = ["README.md",]}  # If I want to append other files to the description

