# I keep this since metadata in pyproject.toml is still experimental for setuptools.

# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
# https://ini2toml.readthedocs.io/en/latest/setuptools_pep621.html

# [metadata]
# name = sweetsweep
# author = Matthieu Heitz
# author_email = heitz.matthieu@gmail.com
# version = attr: sweetsweep.__version__
# description = SweetSweep: Run parameter sweeps and visualize results effortlessly
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/matthieuheitz/parameter-sweep-viewer
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent
#
#
# [options]
# packages = find:
# include_package_data = True
# install_requires =
#     PyQt5
#     numpy
# #     PyQt5 >= 5.12
# #     numpy >= 1.18
